statedb: Add REST API for statedb queries
This implements support for remotely querying the contents of StateDB tables
over the REST API. It is implemented in terms of raw queries, e.g. the table,
index names and the key []byte is transferred to the server which then performs
the query against the given table and index. This allows reuse of the Index[Obj, Key]
types and thus provides the same experience as server side:

    table := statedb.NewRemoteTable[*tables.Device](client, "devices")

    // Query devices by revision, least recently changed objects first.
    iter, err := table.LowerBound(ctx, statedb.ByRevision[*tables.Device](0))
    for device, revision, ok := iter.Next(); ok; device, revision, ok = iter.Next { ... }

    // Find devices by name: all devices that start with "e":
    iter, err = table.LowerBound(ctx, tables.DeviceNameIndex("e"))

    // Exact matches:
    iter, err = table.Get(ctx, tables.DeviceNameIndex("eth0"))
    if device, revision, ok := iter.Next(); ok { ... }

On top of this API a generic utility is implemented in cilium-dbg/cmd/statedb.go
to allow adding the ability to pretty-print the contents of any table whose object
implements 'statedb.TabWritable':

	// "cilium-dbg statedb devices"
	statedbTableCommand[*tables.Device]("devices")

Example output:

  root@kind-worker:/home/cilium# cilium statedb devices
  Name              Index   Selected   Type     MTU     HWAddr              Flags                    Addresses
  lxc4446c55b3291   8       false      veth     1500    46:b9:9b:85:c2:e2   up|broadcast|multicast   fe80::44b9:9bff:fe85:c2e2
  lo                1       false      device   65536                       up|loopback              127.0.0.1, ::1
  lxc_health        71      false      veth     1500    06:d8:63:ff:20:3b   up|broadcast|multicast   fe80::4d8:63ff:feff:203b
  cilium_host       3       false      veth     1500    66:e0:0e:19:a6:9f   up|broadcast|multicast   10.244.1.186

Since go-swagger does not provide an easy w
